--- a/module3-ridge-regression/LS_DS_213_assignment.ipynb
+++ b/module3-ridge-regression/LS_DS_213_assignment.ipynb
@@ -2827,13 +2827,547 @@
         "colab_type": "text"
       },
       "source": [
-        "#Do feature selection with SelectKBest."
+        "#Feature engineering"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "xowrmoJBkCa9",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def engineer_features(X):\n",
+        "  #Avoid settingWithCopyWarning\n",
+        "  X = X.copy()\n",
+        "\n",
+        "  #how many total features each aparment have? \n",
+        "  features_cols = ['ZIP_CODE ','RESIDENTIAL_UNITS', 'COMMERCIAL_UNITS', 'TOTAL_UNITS','LAND_SQUARE_FEET', 'GROSS_SQUARE_FEET', 'YEAR_BUILT']\n",
+        "\n",
+        "  #total square feet\n",
+        "  X['total_sqft'] = X[['LAND_SQUARE_FEET', 'GROSS_SQUARE_FEET']].sum(axis=1)\n",
+        "\n",
+        "  #commercial or resindential \n",
+        "  X['commercial_or_resindential'] = (X['COMMERCIAL_UNITS']==1) | (X['RESIDENTIAL_UNITS']==6)\n",
+        "\n",
+        "  #xommercial and residential \n",
+        "  X['commerical_plus_residential'] = X['COMMERCIAL_UNITS'] + X['RESIDENTIAL_UNITS']\n",
+        "\n",
+        "  return X\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SklnvvhjMT-G",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "X_train_eng = engineer_features(X_train_enc)\n",
+        "X_test_eng = engineer_features(X_test_enc)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "28V1nEUBPCW_",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "bb4b0574-d727-4180-885e-87a4169ae037"
+      },
+      "source": [
+        "X_train_eng.shape"
+      ],
+      "execution_count": 146,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(2507, 51)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 146
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_HqLWQrSOMcb",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 241
+        },
+        "outputId": "a9af9eb4-ce4c-44f5-de65-44a7cad041fe"
+      },
+      "source": [
+        "X_test_eng.head()"
+      ],
+      "execution_count": 147,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>BOROUGH_3</th>\n",
+              "      <th>BOROUGH_4</th>\n",
+              "      <th>BOROUGH_2</th>\n",
+              "      <th>BOROUGH_5</th>\n",
+              "      <th>BOROUGH_1</th>\n",
+              "      <th>NEIGHBORHOOD_OTHER</th>\n",
+              "      <th>NEIGHBORHOOD_FLUSHING-NORTH</th>\n",
+              "      <th>NEIGHBORHOOD_BEDFORD STUYVESANT</th>\n",
+              "      <th>NEIGHBORHOOD_FOREST HILLS</th>\n",
+              "      <th>NEIGHBORHOOD_BOROUGH PARK</th>\n",
+              "      <th>NEIGHBORHOOD_ASTORIA</th>\n",
+              "      <th>BUILDING_CLASS_CATEGORY_01 ONE FAMILY DWELLINGS</th>\n",
+              "      <th>TAX_CLASS_AT_PRESENT_1</th>\n",
+              "      <th>TAX_CLASS_AT_PRESENT_1D</th>\n",
+              "      <th>BLOCK</th>\n",
+              "      <th>LOT</th>\n",
+              "      <th>BUILDING_CLASS_AT_PRESENT_A9</th>\n",
+              "      <th>BUILDING_CLASS_AT_PRESENT_A1</th>\n",
+              "      <th>BUILDING_CLASS_AT_PRESENT_A5</th>\n",
+              "      <th>BUILDING_CLASS_AT_PRESENT_A0</th>\n",
+              "      <th>BUILDING_CLASS_AT_PRESENT_A2</th>\n",
+              "      <th>BUILDING_CLASS_AT_PRESENT_A3</th>\n",
+              "      <th>BUILDING_CLASS_AT_PRESENT_S1</th>\n",
+              "      <th>BUILDING_CLASS_AT_PRESENT_A4</th>\n",
+              "      <th>BUILDING_CLASS_AT_PRESENT_A6</th>\n",
+              "      <th>BUILDING_CLASS_AT_PRESENT_A8</th>\n",
+              "      <th>BUILDING_CLASS_AT_PRESENT_B2</th>\n",
+              "      <th>BUILDING_CLASS_AT_PRESENT_S0</th>\n",
+              "      <th>BUILDING_CLASS_AT_PRESENT_B3</th>\n",
+              "      <th>ZIP_CODE</th>\n",
+              "      <th>RESIDENTIAL_UNITS</th>\n",
+              "      <th>COMMERCIAL_UNITS</th>\n",
+              "      <th>TOTAL_UNITS</th>\n",
+              "      <th>LAND_SQUARE_FEET</th>\n",
+              "      <th>GROSS_SQUARE_FEET</th>\n",
+              "      <th>YEAR_BUILT</th>\n",
+              "      <th>TAX_CLASS_AT_TIME_OF_SALE</th>\n",
+              "      <th>BUILDING_CLASS_AT_TIME_OF_SALE_A9</th>\n",
+              "      <th>BUILDING_CLASS_AT_TIME_OF_SALE_A1</th>\n",
+              "      <th>BUILDING_CLASS_AT_TIME_OF_SALE_A5</th>\n",
+              "      <th>BUILDING_CLASS_AT_TIME_OF_SALE_A0</th>\n",
+              "      <th>BUILDING_CLASS_AT_TIME_OF_SALE_A2</th>\n",
+              "      <th>BUILDING_CLASS_AT_TIME_OF_SALE_A3</th>\n",
+              "      <th>BUILDING_CLASS_AT_TIME_OF_SALE_S1</th>\n",
+              "      <th>BUILDING_CLASS_AT_TIME_OF_SALE_A4</th>\n",
+              "      <th>BUILDING_CLASS_AT_TIME_OF_SALE_A6</th>\n",
+              "      <th>BUILDING_CLASS_AT_TIME_OF_SALE_A8</th>\n",
+              "      <th>BUILDING_CLASS_AT_TIME_OF_SALE_S0</th>\n",
+              "      <th>total_sqft</th>\n",
+              "      <th>commercial_or_resindential</th>\n",
+              "      <th>commerical_plus_residential</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>18235</th>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>5913</td>\n",
+              "      <td>878</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>10471.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>2272.0</td>\n",
+              "      <td>1930.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>2272.0</td>\n",
+              "      <td>False</td>\n",
+              "      <td>1.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>18239</th>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>5488</td>\n",
+              "      <td>48</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>10465.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>720.0</td>\n",
+              "      <td>1935.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>720.0</td>\n",
+              "      <td>False</td>\n",
+              "      <td>1.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>18244</th>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>5936</td>\n",
+              "      <td>31</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>11209.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>2210.0</td>\n",
+              "      <td>1925.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>2210.0</td>\n",
+              "      <td>False</td>\n",
+              "      <td>1.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>18280</th>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>7813</td>\n",
+              "      <td>24</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>11210.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>1520.0</td>\n",
+              "      <td>1915.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1520.0</td>\n",
+              "      <td>False</td>\n",
+              "      <td>1.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>18285</th>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>8831</td>\n",
+              "      <td>160</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>11229.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>840.0</td>\n",
+              "      <td>1925.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>840.0</td>\n",
+              "      <td>False</td>\n",
+              "      <td>1.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "       BOROUGH_3  ...  commerical_plus_residential\n",
+              "18235          0  ...                          1.0\n",
+              "18239          0  ...                          1.0\n",
+              "18244          1  ...                          1.0\n",
+              "18280          1  ...                          1.0\n",
+              "18285          1  ...                          1.0\n",
+              "\n",
+              "[5 rows x 51 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 147
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xmu9rIS2PphP",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "f3a8edea-c2f5-49d9-acd0-9fc6bcad47ac"
+      },
+      "source": [
+        "#how many features do we have in dataset\n",
+        "features = X_train_eng.columns\n",
+        "n= len(features)\n",
+        "n"
+      ],
+      "execution_count": 148,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "51"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 148
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MwXgAt4qQoO3",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "ddfa00f2-8116-4934-d399-3964e4e3af43"
+      },
+      "source": [
+        "#access all possible combinations\n",
+        "#how many ways to choose 1 to n features?\n",
+        "\n",
+        "from math import factorial\n",
+        "\n",
+        "def n_choose_k(n,k):\n",
+        "  return factorial(n)/(factorial(k)*factorial(n-k))\n",
+        "\n",
+        "combinations = sum(n_choose_k(n,k) for k in range(1, n+1))\n",
+        "print(f'{combinations:,.0f}')"
+      ],
+      "execution_count": 149,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2,251,799,813,685,247\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ovdRSBPYSJls",
+        "colab_type": "text"
+      },
+      "source": [
+        "#Do feature selection with SelectKBest."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vF6OQN0YSL2o",
         "colab_type": "code",
         "colab": {}
       },
