--- a/module3-ridge-regression/LS_DS_213_assignment.ipynb
+++ b/module3-ridge-regression/LS_DS_213_assignment.ipynb
@@ -3290,13 +3290,108 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "NZhGStqLT1Lj",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 901
+        },
+        "outputId": "5ff938d4-da58-4f79-efd7-dcba3b257db4"
+      },
+      "source": [
+        "X_test_eng.isnull().sum()"
+      ],
+      "execution_count": 158,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "BOROUGH_3                                          0\n",
+              "BOROUGH_4                                          0\n",
+              "BOROUGH_2                                          0\n",
+              "BOROUGH_5                                          0\n",
+              "BOROUGH_1                                          0\n",
+              "NEIGHBORHOOD_OTHER                                 0\n",
+              "NEIGHBORHOOD_FLUSHING-NORTH                        0\n",
+              "NEIGHBORHOOD_BEDFORD STUYVESANT                    0\n",
+              "NEIGHBORHOOD_FOREST HILLS                          0\n",
+              "NEIGHBORHOOD_BOROUGH PARK                          0\n",
+              "NEIGHBORHOOD_ASTORIA                               0\n",
+              "BUILDING_CLASS_CATEGORY_01 ONE FAMILY DWELLINGS    0\n",
+              "TAX_CLASS_AT_PRESENT_1                             0\n",
+              "TAX_CLASS_AT_PRESENT_1D                            0\n",
+              "BLOCK                                              0\n",
+              "LOT                                                0\n",
+              "BUILDING_CLASS_AT_PRESENT_A9                       0\n",
+              "BUILDING_CLASS_AT_PRESENT_A1                       0\n",
+              "BUILDING_CLASS_AT_PRESENT_A5                       0\n",
+              "BUILDING_CLASS_AT_PRESENT_A0                       0\n",
+              "BUILDING_CLASS_AT_PRESENT_A2                       0\n",
+              "BUILDING_CLASS_AT_PRESENT_A3                       0\n",
+              "BUILDING_CLASS_AT_PRESENT_S1                       0\n",
+              "BUILDING_CLASS_AT_PRESENT_A4                       0\n",
+              "BUILDING_CLASS_AT_PRESENT_A6                       0\n",
+              "BUILDING_CLASS_AT_PRESENT_A8                       0\n",
+              "BUILDING_CLASS_AT_PRESENT_B2                       0\n",
+              "BUILDING_CLASS_AT_PRESENT_S0                       0\n",
+              "BUILDING_CLASS_AT_PRESENT_B3                       0\n",
+              "ZIP_CODE                                           0\n",
+              "RESIDENTIAL_UNITS                                  0\n",
+              "COMMERCIAL_UNITS                                   0\n",
+              "TOTAL_UNITS                                        0\n",
+              "LAND_SQUARE_FEET                                   0\n",
+              "GROSS_SQUARE_FEET                                  0\n",
+              "YEAR_BUILT                                         0\n",
+              "TAX_CLASS_AT_TIME_OF_SALE                          0\n",
+              "BUILDING_CLASS_AT_TIME_OF_SALE_A9                  0\n",
+              "BUILDING_CLASS_AT_TIME_OF_SALE_A1                  0\n",
+              "BUILDING_CLASS_AT_TIME_OF_SALE_A5                  0\n",
+              "BUILDING_CLASS_AT_TIME_OF_SALE_A0                  0\n",
+              "BUILDING_CLASS_AT_TIME_OF_SALE_A2                  0\n",
+              "BUILDING_CLASS_AT_TIME_OF_SALE_A3                  0\n",
+              "BUILDING_CLASS_AT_TIME_OF_SALE_S1                  0\n",
+              "BUILDING_CLASS_AT_TIME_OF_SALE_A4                  0\n",
+              "BUILDING_CLASS_AT_TIME_OF_SALE_A6                  0\n",
+              "BUILDING_CLASS_AT_TIME_OF_SALE_A8                  0\n",
+              "BUILDING_CLASS_AT_TIME_OF_SALE_S0                  0\n",
+              "total_sqft                                         0\n",
+              "commercial_or_resindential                         0\n",
+              "commerical_plus_residential                        0\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 158
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OchB8RoyT99d",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "X_test_eng = X_test_eng.fillna(0)\n",
+        "X_train_eng = X_train_eng.fillna(0)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "xmu9rIS2PphP",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "f3a8edea-c2f5-49d9-acd0-9fc6bcad47ac"
+        "outputId": "fdafa1c5-2ab1-45f1-bad4-7c740b445eb8"
       },
       "source": [
         "#how many features do we have in dataset\n",
@@ -3304,7 +3399,7 @@
         "n= len(features)\n",
         "n"
       ],
-      "execution_count": 148,
+      "execution_count": 154,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3316,7 +3411,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 148
+          "execution_count": 154
         }
       ]
     },
@@ -3329,7 +3424,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "ddfa00f2-8116-4934-d399-3964e4e3af43"
+        "outputId": "241a180c-ce2b-413d-ce33-58c8703fe9a0"
       },
       "source": [
         "#access all possible combinations\n",
@@ -3343,7 +3438,7 @@
         "combinations = sum(n_choose_k(n,k) for k in range(1, n+1))\n",
         "print(f'{combinations:,.0f}')"
       ],
-      "execution_count": 149,
+      "execution_count": 155,
       "outputs": [
         {
           "output_type": "stream",
@@ -3369,13 +3464,152 @@
       "metadata": {
         "id": "vF6OQN0YSL2o",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 221
+        },
+        "outputId": "31af8f44-f9a8-4c63-e1da-a6aac75078ef"
       },
       "source": [
-        ""
+        "#TODO select the 15(arbitrary) features that best correlate with target\n",
+        "\n",
+        "#IMPORTANT!\n",
+        "# .fit_transform on the train set\n",
+        "# .transform on the test set\n",
+        "# f_regression calculates p_value\n",
+        "\n",
+        "from sklearn.feature_selection import SelectKBest, f_regression\n",
+        "\n",
+        "selector = SelectKBest(score_func=f_regression, k=15)\n",
+        "X_train_kbest = selector.fit_transform(X_train_eng, y_train)\n",
+        "X_test_kbest = selector.transform(X_test_eng)\n",
+        "\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 156,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/sklearn/feature_selection/_univariate_selection.py:299: RuntimeWarning: divide by zero encountered in true_divide\n",
+            "  corr /= X_norms\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/feature_selection/_univariate_selection.py:299: RuntimeWarning: invalid value encountered in true_divide\n",
+            "  corr /= X_norms\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/feature_selection/_univariate_selection.py:304: RuntimeWarning: invalid value encountered in true_divide\n",
+            "  F = corr ** 2 / (1 - corr ** 2) * degrees_of_freedom\n",
+            "/usr/local/lib/python3.6/dist-packages/scipy/stats/_distn_infrastructure.py:903: RuntimeWarning: invalid value encountered in greater\n",
+            "  return (a < x) & (x < b)\n",
+            "/usr/local/lib/python3.6/dist-packages/scipy/stats/_distn_infrastructure.py:903: RuntimeWarning: invalid value encountered in less\n",
+            "  return (a < x) & (x < b)\n",
+            "/usr/local/lib/python3.6/dist-packages/scipy/stats/_distn_infrastructure.py:1912: RuntimeWarning: invalid value encountered in less_equal\n",
+            "  cond2 = cond0 & (x <= _a)\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hqRtoakqVM_s",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "b2953d6b-ace7-4cee-c180-776c1162783a"
+      },
+      "source": [
+        "X_test_kbest.shape, X_train_kbest.shape"
+      ],
+      "execution_count": 159,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((644, 15), (2507, 15))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 159
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "b4bV3_ZUVX-2",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 119
+        },
+        "outputId": "1c3a8d89-1008-40df-9a46-74bc97ef6f0a"
+      },
+      "source": [
+        "#TODO What features were selected? \n",
+        "#KBest fit changes to numpy array\n",
+        "mask = selector.get_support()\n",
+        "mask"
+      ],
+      "execution_count": 161,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ True, False,  True,  True, False,  True,  True, False,  True,\n",
+              "       False, False, False, False, False,  True, False, False, False,\n",
+              "       False, False, False,  True, False, False, False, False, False,\n",
+              "       False, False,  True, False,  True,  True, False,  True, False,\n",
+              "       False, False, False, False, False, False,  True, False, False,\n",
+              "       False, False, False,  True, False,  True])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 161
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EUuJokZ6VuHM",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 119
+        },
+        "outputId": "f3f85868-bcf5-48dd-f013-742ec81fb093"
+      },
+      "source": [
+        "#returns the features which were True, which are the ones that have the strongest correlation\n",
+        "X_train_eng.columns[mask]"
+      ],
+      "execution_count": 162,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Index(['BOROUGH_3', 'BOROUGH_2', 'BOROUGH_5', 'NEIGHBORHOOD_OTHER',\n",
+              "       'NEIGHBORHOOD_FLUSHING-NORTH', 'NEIGHBORHOOD_FOREST HILLS', 'BLOCK',\n",
+              "       'BUILDING_CLASS_AT_PRESENT_A3', 'ZIP_CODE', 'COMMERCIAL_UNITS',\n",
+              "       'TOTAL_UNITS', 'GROSS_SQUARE_FEET', 'BUILDING_CLASS_AT_TIME_OF_SALE_A3',\n",
+              "       'total_sqft', 'commerical_plus_residential'],\n",
+              "      dtype='object')"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 162
+        }
+      ]
     },
     {
       "cell_type": "markdown",
